kubernetes/base/002_terminology-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminology-service
spec:
  selector:
    app: terminology-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
