kubernetes/base/003_terminology-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: terminology-service
spec:
  hosts:
  - "*"
  gateways:
  - gh-gateway
  http:
  - match:
    - uri:
        prefix: /terminologies/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: terminology-service.default.svc.cluster.local
        port:
          number: 3000
